--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "sass": "1.49.7",
+    "styled-components": "^6.0.7",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -37,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
