--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "firebase": "9.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.1.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "sass": "1.49.7",
     "styled-components": "^6.0.7",
     "web-vitals": "2.1.4"
@@ -38,6 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
